# Franka_RobMan

./: README.md
panda-gazebo/panda_gazebo/launch/: put_robot_in_world.launch
panda-gazebo/panda_gazebo/resources/worlds/: pick_and_place.world
pick_and_place/: CMakeLists.txt  package.xml
pick_and_place/scripts/: cube_param.py  pick_box.py
pick_and_place/src/pick_and_place_module/: eef_control.py  grasping.py  pick_and_place.py
